changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -129,16 +129,16 @@
         <thead class="table-light">
           <tr>
             <th></th>
-            <th class="align-left">Date</th>
-            <th class="align-left">Khata Name</th>
-            <th class="align-left">Bill No.</th>
-            <th class="align-left">Product</th>
-            <th style="text-align: left;">Rate</th>
-            <th class="align-left">Vehicle No.</th>
-            <th class="align-left"> Amount</th>
-            <th class="align-left"> Quantity</th>
-            <th style="text-align: left;">View Details</th>
-            <th style="text-align: left;">Action</th>
+            <th class="align-left"><b>Date</b></th>
+            <th class="align-left"><b>Khata Name</b></th>
+            <th class="align-left"><b>Bill No.</b></th>
+            <th class="align-left"><b>Product</b></th>
+            <th style="text-align: left;"><b>Rate</b></th>
+            <th class="align-left"><b>Vehicle No.</b></th>
+            <th class="align-left"><b> Amount</b></th>
+            <th class="align-left"><b> Quantity</b></th>
+            <th style="text-align: left;"><b>View Details</b></th>
+            <th style="text-align: left;"><b>Action</b></th>
 
           </tr>
         </thead>
