--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget10/base-tables-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget10/base-tables-widget10.component.html
@@ -80,21 +80,21 @@
           <table class="table table-hover table-striped">
             <thead>
               <tr>
-                <th style="text-align: left">Invoice No.</th>
+                <th style="text-align: left"><b>Invoice No.</b></th>
                 <th style="text-align: left; width: 102px">
-                  Generated Date
+                 <b> Generated Date</b>
                 </th>
-                <th style="text-align: left">Manual No.</th>
-                <th style="text-align: left">Build To Name</th>
+                <th style="text-align: left"><b>Manual No.</b></th>
+                <th style="text-align: left"><b>Build To Name</b></th>
                 <th style="text-align: left; width: 137px">
-                  From - To &nbsp;&nbsp;&nbsp;&nbsp; Date
+                  <b>From - To &nbsp;&nbsp;&nbsp;&nbsp; Date</b>
                 </th>
-                <th style="text-align: left;">Type</th>
-                <th style="text-align: center">Opening o/s</th>
-                <th style="text-align: center">Purchase Amount</th>
-                <th style="text-align: center">Payment Amount</th>
-                <th style="text-align: center">Payable Amount</th>
-                <th style="text-align: left">Action</th>
+                <th style="text-align: left;"><b>Type</b></th>
+                <th style="text-align: center"><b>Opening o/s</b></th>
+                <th style="text-align: center"><b>Purchase Amount</b></th>
+                <th style="text-align: center"><b>Payment Amount</b></th>
+                <th style="text-align: center"><b>Payable Amount</b></th>
+                <th style="text-align: left"><b>Action</b></th>
               </tr>
             </thead>
             <tbody
