--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
@@ -61,14 +61,14 @@
       <thead class="table-light">
         <tr>
           <th></th>
-          <th style="text-align: left;">Date</th>
-          <th style="text-align: left;">Khata Name</th>
-          <th style="text-align: left;">Payment Mode</th>
-          <th style="text-align: left;">Total Amount</th>
-          <th style="text-align: left;">Account</th>
-          <th style="text-align: left;">Payment Score</th>
-          <th style="text-align: left;">Pending Days</th>
-          <th style="text-align: left;">Action</th>
+          <th style="text-align: left;"><b>Date</b></th>
+          <th style="text-align: left;"><b>Khata Name</b></th>
+          <th style="text-align: left;"><b>Payment Mode</b></th>
+          <th style="text-align: left;"><b>Total Amount</b></th>
+          <th style="text-align: left;"><b>Account</b></th>
+          <th style="text-align: left;"><b>Payment Score</b></th>
+          <th style="text-align: left;"><b>Pending Days</b></th>
+          <th style="text-align: left;"><b>Action</b></th>
         </tr>
       </thead>
       <tbody
