--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget10/lists-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget10/lists-widget10.component.html
@@ -52,14 +52,14 @@
                 <table class="table table-centered table-nowrap">
                   <thead class="table-light">
                     <tr>
-                      <th style="text-align: center;"> Salary Date </th>
-                      <th style="text-align: center;"> Staff Name </th>
-                      <th style="text-align: center;"> Mobile Number </th>
-                      <th style="text-align: center;"> Role </th>
-                      <th style="text-align: center;"> Salary </th>
-                      <th style="text-align: center;"> Deduction Salary </th>
-                      <th style="text-align: center;"> Final Salary </th>
-                      <th style="text-align: center;"> Salary Details </th>
+                      <th style="text-align: center;"><b> Salary Date </b></th>
+                      <th style="text-align: center;"><b> Staff Name </b></th>
+                      <th style="text-align: center;"><b> Mobile Number </b></th>
+                      <th style="text-align: center;"><b> Role </b></th>
+                      <th style="text-align: center;"><b> Salary </b></th>
+                      <th style="text-align: center;"><b> Deduction Salary </b></th>
+                      <th style="text-align: center;"><b> Final Salary </b></th>
+                      <th style="text-align: center;"><b> Salary Details </b></th>
                     </tr>
                   </thead>
                   <tbody *ngFor="let data of addStaffSalaryArray; let i = index;">
@@ -113,13 +113,13 @@
                 <table class="table table-centered table-nowrap">
                   <thead class="table-light">
                     <tr>
-                      <th style="text-align: left;"> Salary Date </th>
-                      <th style="text-align: left;"> Staff Name </th>
-                      <th style="text-align: left;"> Mobile Number </th>
-                      <th style="text-align: left;"> Role </th>
-                      <th style="text-align: left;"> Final Salary </th>
-                      <th style="text-align: left;"> Salary Details </th>
-                      <th style="text-align: left;"> Action </th>
+                      <th style="text-align: left;"><b> Salary Date </b></th>
+                      <th style="text-align: left;"><b> Staff Name </b></th>
+                      <th style="text-align: left;"><b> Mobile Number </b></th>
+                      <th style="text-align: left;"><b> Role </b></th>
+                      <th style="text-align: left;"><b> Final Salary </b></th>
+                      <th style="text-align: left;"><b> Salary Details </b></th>
+                      <th style="text-align: left;"><b> Action </b></th>
                     </tr>
                   </thead>
                   <tbody
