--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget11/lists-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget11/lists-widget11.component.html
@@ -128,16 +128,16 @@
       <table class="table table-centered table-nowrap" id="excel-table">
           <thead class="table-light">
               <tr>
-                  <th style="text-align: left;"> date </th>
-                  <th style="text-align: left;"> shift </th>
-                  <th style="text-align: left;"> operator name </th>
-                  <th style="text-align: left;"> meter sales </th>
-                  <th style="text-align: left;"> credit (a) </th>
-                  <th style="text-align: left;"> digital (b) </th>
-                  <th style="text-align: left;"> cash (c) </th>
-                  <th style="text-align: left;"> expenses </th>
-                  <th style="text-align: left;"> short </th>
-                  <th style="text-align: left;"> shift tally (a+b+c) </th>
+                  <th style="text-align: left;"><b> date </b></th>
+                  <th style="text-align: left;"><b> shift </b></th>
+                  <th style="text-align: left;"><b> operator name </b></th>
+                  <th style="text-align: left;"><b> meter sales </b></th>
+                  <th style="text-align: left;"><b> credit (a) </b></th>
+                  <th style="text-align: left;"><b> digital (b) </b></th>
+                  <th style="text-align: left;"><b> cash (c) </b></th>
+                  <th style="text-align: left;"><b> expenses </b></th>
+                  <th style="text-align: left;"><b> short </b></th>
+                  <th style="text-align: left;"><b> shift tally (a+b+c) </b></th>
               </tr>
           </thead>
 
