--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget12/lists-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget12/lists-widget12.component.html
@@ -115,16 +115,16 @@
         <table class="table table-centered">
             <thead class="table-light">
                 <tr>
-                    <th style="text-align: center;">date</th>
-                    <th style="text-align: center;">meter sales</th>
-                    <th style="text-align: center;">credit (a)</th>
-                    <th style="text-align: center;">digital (b)</th>
-                    <th style="text-align: center;">cash (c)</th>
-                    <th style="text-align: center;">expenses</th>
-                    <th style="text-align: center;">short</th>
-                    <th style="text-align: center;">total tally (a+b+c)</th>
+                    <th style="text-align: center;"><b>date</b></th>
+                    <th style="text-align: center;"><b>meter sales</b></th>
+                    <th style="text-align: center;"><b>credit (a)</b></th>
+                    <th style="text-align: center;"><b>digital (b)</b></th>
+                    <th style="text-align: center;"><b>cash (c)</b></th>
+                    <th style="text-align: center;"><b>expenses</b></th>
+                    <th style="text-align: center;"><b>short</b></th>
+                    <th style="text-align: center;"><b>total tally (a+b+c)</b></th>
                     
-                    <th style="text-align: center;" colspan="2">view</th>
+                    <th style="text-align: center;" colspan="2"><b>view</b></th>
 
                 </tr>
             </thead>
@@ -1980,16 +1980,16 @@
                     <thead class="table-light">
                
                     <tr>
-                        <th style="text-align: center;"> date </th> 
-                        <th style="text-align: center;"> product </th>
-                        <th style="text-align: center;"> credit (quantity) 
-                            <br> Ltr/kg
+                        <th style="text-align: center;"><b> date </b></th> 
+                        <th style="text-align: center;"><b> product </b></th>
+                        <th style="text-align: center;"><b> credit (quantity) 
+                            <br> Ltr/kg </b> 
                         </th>
-                        <th style="text-align: center;"> meter sales (quantity) 
-                                                        <br> Ltr/kg
+                        <th style="text-align: center;"><b> meter sales (quantity) 
+                                                        <br> Ltr/kg </b>
                         </th>
-                        <th style="text-align: center;"> meter sales (amount) 
-                                                        <br> Rs
+                        <th style="text-align: center;"><b> meter sales (amount) 
+                                                        <br> Rs </b>
                         </th>
                     </tr>
                 </thead>
