--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
@@ -43,16 +43,16 @@
           <table class="table table-centered table-nowrap">
             <thead class="table-light">
               <tr>
-                <th style="text-align: left;"> Date </th>
-                <th style="text-align: left;"> Shift Sales (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> A-Credit (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> B-Digital (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> C-Cash (1+2+3) (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> Shift Tally (A+B+C) (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> 1-Cash Handover (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> 2-Cash Expenses (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> 3-Cash Short/Diff (<li class="fas fa-rupee-sign"></li>) </th>
-                <th style="text-align: left;"> View Details </th>
+                <th style="text-align: left;"><b> Date </b></th>
+                <th style="text-align: left;"><b> Shift Sales (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> A-Credit (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> B-Digital (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> C-Cash (1+2+3) (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> Shift Tally (A+B+C) (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> 1-Cash Handover (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> 2-Cash Expenses (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> 3-Cash Short/Diff (<li class="fas fa-rupee-sign"></li>) </b></th>
+                <th style="text-align: left;"><b> View Details </b></th>
               </tr>
             </thead>
   
