--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget14/lists-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget14/lists-widget14.component.html
@@ -96,15 +96,15 @@
     <table class="table table-centered table-nowrap" id="excel-table">
       <thead class="table-light">
         <tr>
-          <th style="text-align: left;"> Shift </th>
-          <th style="text-align: left;"> Meter Sales </th>
-          <th style="text-align: left;"> Credit (a) </th>
-          <th style="text-align: left;"> Digital (b) </th>
-          <th style="text-align: left;"> Cash (c) </th>
-          <th style="text-align: left;"> Expenses </th>
-          <th style="text-align: left;"> Short </th>
-          <th style="text-align: left;"> Shift Tally (a+b+c) </th>
-          <th style="text-align: left;"> View </th>
+          <th style="text-align: left;"><b> Shift </b></th>
+          <th style="text-align: left;"><b> Meter Sales </b></th>
+          <th style="text-align: left;"><b> Credit (a) </b></th>
+          <th style="text-align: left;"><b> Digital (b) </b></th>
+          <th style="text-align: left;"><b> Cash (c) </b></th>
+          <th style="text-align: left;"><b> Expenses </b></th>
+          <th style="text-align: left;"><b> Short </b></th>
+          <th style="text-align: left;"><b> Shift Tally (a+b+c)</b> </th>
+          <th style="text-align: left;"><b> View </b></th>
         </tr>
       </thead>
 
@@ -171,17 +171,17 @@
     <table class="table table-centered table-nowrap" id="excel-table">
       <thead class="table-light">
         <tr>
-          <th style="text-align: left;"> Date </th>
-          <th style="text-align: left;"> Shift </th>
-          <th style="text-align: left;"> Product </th>
-          <th style="text-align: left;"> Credit (Quantity)
-            Ltr/Kg
+          <th style="text-align: left;"><b> Date </b></th>
+          <th style="text-align: left;"><b> Shift </b></th>
+          <th style="text-align: left;"><b> Product </b></th>
+          <th style="text-align: left;"><b> Credit (Quantity)
+            Ltr/Kg</b>
           </th>
-          <th style="text-align: left;"> Meter Sales (Quantity)
-            Ltr/Kg
+          <th style="text-align: left;"><b> Meter Sales (Quantity)
+            Ltr/Kg </b>
           </th>
-          <th style="text-align: left;"> Meter Sales (Amount)
-            Rs
+          <th style="text-align: left;"><b> Meter Sales (Amount)
+            Rs </b>
           </th>
         </tr>
       </thead>
