--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget15/lists-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget15/lists-widget15.component.html
@@ -103,14 +103,14 @@
               <table class="table table-centered table-nowrap" id="excel-table">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;"> operator name </th>
-                    <th style="text-align: left;"> meter sales </th>
-                    <th style="text-align: left;"> credit (a) </th>
-                    <th style="text-align: left;"> digital (b) </th>
-                    <th style="text-align: left;"> cash (c) </th>
-                    <th style="text-align: left;"> expenses </th>
-                    <th style="text-align: left;"> short </th>
-                    <th style="text-align: left;"> shift tally (a+b+c) </th>
+                    <th style="text-align: left;"><b> operator name </b></th>
+                    <th style="text-align: left;"><b> meter sales </b></th>
+                    <th style="text-align: left;"><b> credit (a) </b></th>
+                    <th style="text-align: left;"><b> digital (b) </b></th>
+                    <th style="text-align: left;"><b> cash (c) </b></th>
+                    <th style="text-align: left;"><b> expenses </b></th>
+                    <th style="text-align: left;"><b> short </b></th>
+                    <th style="text-align: left;"><b> shift tally (a+b+c) </b></th>
                   </tr>
                 </thead>
 
@@ -173,11 +173,11 @@
               <table class="table table-centered table-nowrap" id="excel-table">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;"> operator name </th>
-                    <th style="text-align: left;"> Product </th>
-                    <th style="text-align: left;"> credit (Quantity) Ltr/Kg </th>
-                    <th style="text-align: left;"> meter Sales (Quantity) Ltr/Kg </th>
-                    <th style="text-align: left;"> meter Sales (Amount) Rs </th>
+                    <th style="text-align: left;"><b> operator name </b></th>
+                    <th style="text-align: left;"><b> Product </b></th>
+                    <th style="text-align: left;"><b> credit (Quantity) Ltr/Kg </b></th>
+                    <th style="text-align: left;"><b> meter Sales (Quantity) Ltr/Kg </b></th>
+                    <th style="text-align: left;"><b> meter Sales (Amount) Rs </b></th>
                   </tr>
                 </thead>
 
