--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget8/lists-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget8/lists-widget8.component.html
@@ -94,12 +94,12 @@
                     <table class="table table-centered table-nowrap">
                       <thead class="table-light">
                         <tr>
-                          <th style="text-align: left;">#</th>
-                          <th style="text-align: left;"> Shift Name </th>
-                          <th style="text-align: left;"> Start Time</th>
-                          <th style="text-align: left;"> End Time </th>
-                          <th style="text-align: left;"> Created At</th>
-                          <th style="text-align: left;"> Action </th>
+                          <th style="text-align: left;"><b>#</b></th>
+                          <th style="text-align: left;"><b> Shift Name </b></th>
+                          <th style="text-align: left;"><b> Start Time</b></th>
+                          <th style="text-align: left;"><b> End Time </b></th>
+                          <th style="text-align: left;"><b> Created At</b></th>
+                          <th style="text-align: left;"><b> Action </b></th>
 
                         </tr>
                       </thead>
