--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget9/lists-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget9/lists-widget9.component.html
@@ -39,12 +39,12 @@
                 <table class="table table-centered table-nowrap">
                   <thead class="table-light">
                     <tr>
-                      <th style="text-align: left;"> Date </th>
-                      <th style="text-align: left;"> Staff Name </th>
-                      <th style="text-align: left;"> Mobile Number </th>
-                      <th style="text-align: left;"> Role </th>
-                      <th style="text-align: left;"> Attendance </th>
-                      <th style="text-align: left;"> Action </th>
+                      <th style="text-align: left;"><b> Date </b></th>
+                      <th style="text-align: left;"><b> Staff Name </b></th>
+                      <th style="text-align: left;"><b> Mobile Number </b></th>
+                      <th style="text-align: left;"><b> Role </b></th>
+                      <th style="text-align: left;"><b> Attendance </b></th>
+                      <th style="text-align: left;"><b> Action </b></th>
                     </tr>
                   </thead>
                   <tbody
@@ -116,10 +116,10 @@
                   <table class="table table-centered table-nowrap">
                     <thead class="table-light">
                       <tr>
-                        <th style="text-align: center;"> Staff Name </th>
-                        <th style="text-align: center;"> Mobile Number </th>
-                        <th style="text-align: center;"> Role </th>
-                        <th style="text-align: center;"> Action </th>
+                        <th style="text-align: center;"><b> Staff Name </b></th>
+                        <th style="text-align: center;"><b> Mobile Number </b></th>
+                        <th style="text-align: center;"><b> Role </b></th>
+                        <th style="text-align: center;"><b> Action </b></th>
                       </tr>
                     </thead>
                     <tbody *ngFor="let data of addAttendanceArray; let i = index;">
