--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
@@ -73,12 +73,12 @@
     <table id="excel-table" class="table table-centered table-nowrap">
       <thead class="table-light">
         <tr>
-          <th style="text-align: left;"> Date </th>
-          <th style="text-align: left;"> Shift </th>
-          <th style="text-align: left;"> Operator Name </th>
-          <th style="text-align: left;"> Digital POS </th>
-          <th style="text-align: left;"> Details </th>
-          <th style="text-align: left;"> Amount </th>
+          <th style="text-align: left;"><b> Date </b></th>
+          <th style="text-align: left;"><b> Shift </b></th>
+          <th style="text-align: left;"><b> Operator Name </b></th>
+          <th style="text-align: left;"><b> Digital POS </b></th>
+          <th style="text-align: left;"><b> Details </b></th>
+          <th style="text-align: left;"><b> Amount </b></th>
         </tr>
       </thead>
       <tbody>
