--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
@@ -132,7 +132,7 @@
           <th class="min-w-120px">Role</th>
           <th class="min-w-120px">Salary</th>
           <th *ngIf = "accessGroupId != '14' " class="min-w-120px">Mapping</th>
-          <th *ngIf = "accessGroupId != '14' " class="min-w-100px text-center">Actions</th>
+          <th *ngIf = "accessGroupId != '14' " class="min-w-100px text-left">Actions</th>
         </tr>
       </thead>
       <!-- end::Table head -->
