--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
@@ -151,14 +151,14 @@
       <thead class="table-light">
         <tr>
           <th></th>
-          <th>Khata Name</th>
-          <th>Added On</th>
-          <th>Email</th>
-          <th>Mobile</th>
-          <th>GST</th>
-          <th>Rating</th>
-          <th>Vehicles</th>
-          <th>Actions</th>
+          <th><b>Khata Name</b></th>
+          <th><b>Added On</b></th>
+          <th><b>Email</b></th>
+          <th><b>Mobile</b></th>
+          <th><b>GST</b></th>
+          <th><b>Rating</b></th>
+          <th><b>Vehicles</b></th>
+          <th><b>Actions</b></th>
         </tr>
       </thead>
       <tbody
