--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
@@ -191,15 +191,15 @@
         <table class="table table-centered table-nowrap">
             <thead class="table-light">
                 <tr>
-                    <th style="text-align: left;">Khata Name</th>
-                    <th style="text-align: left;">Cr Amount Limit</th>
-                    <th style="text-align: left;">Cr Days Limit</th>
-                    <th style="text-align: left;">Opening O/s</th>
-                    <th style="text-align: left;">Total Purchase</th>
-                    <th style="text-align: left;">Total Payment</th>
-                    <th style="text-align: left;">Net O/s</th>
-                    <th style="text-align: left;">Pending Days</th>
-                    <th>Action</th>
+                    <th style="text-align: left;"><b>Khata Name</b></th>
+                    <th style="text-align: left;"><b>Cr Amount Limit</b></th>
+                    <th style="text-align: left;"><b>Cr Days Limit</b></th>
+                    <th style="text-align: left;"><b>Opening O/s</b></th>
+                    <th style="text-align: left;"><b>Total Purchase</b></th>
+                    <th style="text-align: left;"><b>Total Payment</b></th>
+                    <th style="text-align: left;"><b>Net O/s</b></th>
+                    <th style="text-align: left;"><b>Pending Days</b></th>
+                    <th><b>Action</b></th>
                 </tr>
             </thead>
 
