--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget32/tables-widget32.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget32/tables-widget32.component.html
@@ -38,12 +38,12 @@
                                     <table class="table">
                                         <thead>
                                             <tr>
-                                                <th style="text-align: left;">SrNo</th>
-                                                <th style="text-align: left;">Customer Name</th>
-                                                <th style="text-align: left;">Opening Outstanding</th>
-                                                <th style="text-align: left;">Total purchase</th>
-                                                <th style="text-align: left;">Total payment</th>
-                                                <th style="text-align: left;">Net OS</th>
+                                                <th style="text-align: left;"><b>SrNo</b></th>
+                                                <th style="text-align: left;"><b>Customer Name</b></th>
+                                                <th style="text-align: left;"><b>Opening Outstanding</b></th>
+                                                <th style="text-align: left;"><b>Total purchase</b></th>
+                                                <th style="text-align: left;"><b>Total payment</b></th>
+                                                <th style="text-align: left;"><b>Net OS</b></th>
 
                                             </tr>
                                         </thead>
