--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget33/tables-widget33.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget33/tables-widget33.component.html
@@ -58,11 +58,11 @@
 
             <table class="table table-hover table-striped">
                 <thead>
-                    <th>Credit Days Limit</th>
-                    <th>Opening Outstanding</th>
-                    <th>Total Purchase</th>
-                    <th>Total Payment</th>
-                    <th>Net Outstanding</th>
+                    <th><b>Credit Days Limit</b></th>
+                    <th><b>Opening Outstanding</b></th>
+                    <th><b>Total Purchase</b></th>
+                    <th><b>Total Payment</b></th>
+                    <th><b>Net Outstanding</b></th>
                 </thead>
                 <tbody *ngFor="let data of mapAccData">
                     <tr>
@@ -203,11 +203,11 @@
                 <div class="card-body table-responsive">
                     <table class="table table-hover table-striped">
                         <thead>
-                            <th>Credit Days Limit</th>
-                            <th>Opening Outstanding</th>
-                            <th>Total Purchase</th>
-                            <th>Total Payment</th>
-                            <th>Net Outstanding</th>
+                            <th><b>Credit Days Limit</b></th>
+                            <th><b>Opening Outstanding</b></th>
+                            <th><b>Total Purchase</b></th>
+                            <th><b>Total Payment</b></th>
+                            <th><b>Net Outstanding</b></th>
                         </thead>
                         <tbody *ngFor="let data of mapAccData">
                             <tr>
