--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
@@ -130,7 +130,7 @@
           <th class="min-w-120px">UPI</th>
           <th class="min-w-120px">Bank</th>
           <th class="min-w-120px">Default Account</th>
-          <th class="min-w-100px text-center">Actions</th>
+          <th class="min-w-100px text-left">Actions</th>
         </tr>
       </thead>
       <!-- end::Table head -->
