--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
@@ -152,7 +152,7 @@
           <th class="min-w-150px">POS Name</th>
           <th class="min-w-150px">Linked Bank</th>
           <th class="min-w-150px">Mapping</th>
-          <th class="min-w-100px text-center">Actions</th>
+          <th class="min-w-100px text-left">Actions</th>
         </tr>
       </thead>
       <!-- end::Table head -->
