--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget2/tiles-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget2/tiles-widget2.component.html
@@ -47,13 +47,13 @@
             <table class="table table-hover table-striped table-nowrap">
               <thead class="table-light">
                 <tr>
-                  <th style="text-align: left;"> Date </th>
-                  <th style="text-align: left;"> Book </th>
-                  <th style="text-align: left;"> Transaction Type </th>
-                  <th style="text-align: left;"> Details </th>
-                  <th style="text-align: left;"> Paid From </th>
-                  <th style="text-align: left;"> Paid To </th>
-                  <th style="text-align: left;"> Amount</th>
+                  <th style="text-align: left;"><b> Date </b></th>
+                  <th style="text-align: left;"><b> Book </b></th>
+                  <th style="text-align: left;"><b> Transaction Type </b></th>
+                  <th style="text-align: left;"><b> Details </b></th>
+                  <th style="text-align: left;"><b> Paid From </b></th>
+                  <th style="text-align: left;"><b> Paid To </b></th>
+                  <th style="text-align: left;"><b> Amount</b></th>
                   <th></th>
                 </tr>
               </thead>
