--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
@@ -29,9 +29,9 @@
                 <table class="table table-hover table-striped">
                   <thead>
                     <tr>
-                      <th style="text-align: left;"> Account </th>
-                      <th style="text-align: left;"> Date </th>
-                      <th style="text-align: left;"> Total Amount</th>
+                      <th style="text-align: left;"><b> Account </b></th>
+                      <th style="text-align: left;"><b> Date </b></th>
+                      <th style="text-align: left;"><b> Total Amount</b></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -305,12 +305,12 @@
               <table id="excel-table" class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;">Date</th>
-                    <th style="text-align: left;">Transaction Type</th>
-                    <th style="text-align: left;">Details</th>
-                    <th style="text-align: left;">Debit</th>
-                    <th style="text-align: left;">Credit</th>
-                    <th style="text-align: left;">Closing Balance</th>
+                    <th style="text-align: left;"><b>Date</b></th>
+                    <th style="text-align: left;"><b>Transaction Type</b></th>
+                    <th style="text-align: left;"><b>Details</b></th>
+                    <th style="text-align: left;"><b>Debit</b></th>
+                    <th style="text-align: left;"><b>Credit</b></th>
+                    <th style="text-align: left;"><b>Closing Balance</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of oilCoAccountingBookData ; let i = index">
@@ -366,12 +366,12 @@
               <table id="excel-table" class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;">Date</th>
-                    <th style="text-align: left;">Transaction Type</th>
-                    <th style="text-align: left;">Details</th>
-                    <th style="text-align: left;">Debit</th>
-                    <th style="text-align: left;">Credit</th>
-                    <th *ngIf="isBankBlc" style="text-align: left;">Closing Balance</th>
+                    <th style="text-align: left;"><b>Date</b></th>
+                    <th style="text-align: left;"><b>Transaction Type</b></th>
+                    <th style="text-align: left;"><b>Details</b></th>
+                    <th style="text-align: left;"><b>Debit</b></th>
+                    <th style="text-align: left;"><b>Credit</b></th>
+                    <th *ngIf="isBankBlc" style="text-align: left;"><b>Closing Balance</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of bankAccountingBookData ; let i = index">
@@ -437,11 +437,11 @@
               <table id="excel-table" class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;">Date</th>
-                    <th style="text-align: left;">Transaction Type</th>
-                    <th style="text-align: left;">Details</th>
-                    <th style="text-align: left;">Debit</th>
-                    <th style="text-align: left;">Credit</th>
+                    <th style="text-align: left;"><b>Date</b></th>
+                    <th style="text-align: left;"><b>Transaction Type</b></th>
+                    <th style="text-align: left;"><b>Details</b></th>
+                    <th style="text-align: left;"><b>Debit</b></th>
+                    <th style="text-align: left;"><b>Credit</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of posAccountingBookData  ; let i = index">
@@ -489,12 +489,12 @@
               <table id="excel-table" class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;">Date</th>
-                    <th style="text-align: left;">Transaction Type</th>
-                    <th style="text-align: left;">Details</th>
-                    <th style="text-align: left;">Debit</th>
-                    <th style="text-align: left;">Credit</th>
-                    <th style="text-align: left;">Closing Balance</th>
+                    <th style="text-align: left;"><b>Date</b></th>
+                    <th style="text-align: left;"><b>Transaction Type</b></th>
+                    <th style="text-align: left;"><b>Details</b></th>
+                    <th style="text-align: left;"><b>Debit</b></th>
+                    <th style="text-align: left;"><b>Credit</b></th>
+                    <th style="text-align: left;"><b>Closing Balance</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of cashAccountingBookData  ; let i = index">
@@ -732,12 +732,12 @@
               <table id="excel-table" class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;">Date</th>
-                    <th style="text-align: left;">Transaction Type</th>
-                    <th style="text-align: left;">Details</th>
-                    <th style="text-align: left;">Debit</th>
-                    <th style="text-align: left;">Credit</th>
-                    <th style="text-align: left;">Closing Balance</th>
+                    <th style="text-align: left;"><b>Date</b></th>
+                    <th style="text-align: left;"><b>Transaction Type</b></th>
+                    <th style="text-align: left;"><b>Details</b></th>
+                    <th style="text-align: left;"><b>Debit</b></th>
+                    <th style="text-align: left;"><b>Credit</b></th>
+                    <th style="text-align: left;"><b>Closing Balance</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of oilCoAccountingBookData; let i = index">
@@ -793,12 +793,12 @@
               <table id="excel-table" class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;">Date</th>
-                    <th style="text-align: left;">Transaction Type</th>
-                    <th style="text-align: left;">Details</th>
-                    <th style="text-align: left;">Debit</th>
-                    <th style="text-align: left;">Credit</th>
-                    <th *ngIf="isBankBlc" style="text-align: left;">Closing Balance</th>
+                    <th style="text-align: left;"><b>Date</b></th>
+                    <th style="text-align: left;"><b>Transaction Type</b></th>
+                    <th style="text-align: left;"><b>Details</b></th>
+                    <th style="text-align: left;"><b>Debit</b></th>
+                    <th style="text-align: left;"><b>Credit</b></th>
+                    <th *ngIf="isBankBlc" style="text-align: left;"><b>Closing Balance</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of bankAccountingBookData  ; let i = index">
@@ -916,12 +916,12 @@
               <table id="excel-table" class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;">Date</th>
-                    <th style="text-align: left;">Transaction Type</th>
-                    <th style="text-align: left;">Details</th>
-                    <th style="text-align: left;">Debit</th>
-                    <th style="text-align: left;">Credit</th>
-                    <th style="text-align: left;">Closing Balance</th>
+                    <th style="text-align: left;"><b>Date</b></th>
+                    <th style="text-align: left;"><b>Transaction Type</b></th>
+                    <th style="text-align: left;"><b>Details</b></th>
+                    <th style="text-align: left;"><b>Debit</b></th>
+                    <th style="text-align: left;"><b>Credit</b></th>
+                    <th style="text-align: left;"><b>Closing Balance</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of cashAccountingBookData  ; let i = index">
