--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget7/tiles-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget7/tiles-widget7.component.html
@@ -72,15 +72,15 @@
         <table class="table table-centered table-nowrap">
           <thead class="table-light">
             <tr>
-              <th style="text-align: left;">Sr. No.</th>
-              <th style="text-align: left;">Account Number</th>
-              <th style="text-align: left;">Mobile Number</th>
-              <th style="text-align: left;">IFSC</th>
-              <th style="text-align: left;">Account Type</th>
-              <th style="text-align: left;">Bank Name</th>
-              <th style="text-align: left;">UPI Id</th>
-              <th style="text-align: left;">Default Account</th>
-              <th style="text-align: left;">Action</th>
+              <th style="text-align: left;"><b>Sr. No.</b></th>
+              <th style="text-align: left;"><b>Account Number</b></th>
+              <th style="text-align: left;"><b>Mobile Number</b></th>
+              <th style="text-align: left;"><b>IFSC</b></th>
+              <th style="text-align: left;"><b>Account Type</b></th>
+              <th style="text-align: left;"><b>Bank Name</b></th>
+              <th style="text-align: left;"><b>UPI Id</b></th>
+              <th style="text-align: left;"><b>Default Account</b></th>
+              <th style="text-align: left;"><b>Action</b></th>
             </tr>
           </thead>
           <tbody *ngFor="let data of bankAccList; let i = index">
