--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget8/tiles-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget8/tiles-widget8.component.html
@@ -154,12 +154,12 @@
         <table class="table table-centered table-nowrap">
           <thead class="table-light">
             <tr>
-              <th style="text-align: left;">Sr. No.</th>
-              <th style="text-align: left;">Terminal Name</th>
-              <th style="text-align: left;">Terminal Type</th>
-              <th style="text-align: left;">Account </th>
-              <th style="text-align: left;">Active</th>
-              <th style="text-align: left;">Action</th>
+              <th style="text-align: left;"><b>Sr. No.</b></th>
+              <th style="text-align: left;"><b>Terminal Name</b></th>
+              <th style="text-align: left;"><b>Terminal Type</b></th>
+              <th style="text-align: left;"><b>Account </b></th>
+              <th style="text-align: left;"><b>Active</b></th>
+              <th style="text-align: left;"><b>Action</b></th>
             </tr>
           </thead>
 
