--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget7/lists-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget7/lists-widget7.component.html
@@ -8,14 +8,14 @@
             <table class="table table-hover b">
               <thead class="table-light">
                 <tr>
-                  <th style="text-align: left;">Sr No</th>
-                  <th style="text-align: left;">Date</th>
-                  <th style="text-align: left;">Shift </th>
-                  <th style="text-align: left;">Operator Name</th>
-                  <th style="text-align: left;">Start Time</th>
-                  <th style="text-align: left;">End Time</th>
-                  <th style="text-align: left;">Status</th>
-                  <th style="text-align: left;">Action</th>
+                  <th style="text-align: left;"><b>Sr No</b></th>
+                  <th style="text-align: left;"><b>Date</b></th>
+                  <th style="text-align: left;"><b>Shift</b> </th>
+                  <th style="text-align: left;"><b>Operator Name</b></th>
+                  <th style="text-align: left;"><b>Start Time</b></th>
+                  <th style="text-align: left;"><b>End Time</b></th>
+                  <th style="text-align: left;"><b>Status</b></th>
+                  <th style="text-align: left;"><b>Action</b></th>
                 </tr>
               </thead>
 
