--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget4/tiles-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget4/tiles-widget4.component.html
@@ -136,15 +136,15 @@
             <table id="excel-table" class="table table-centered table-nowrap">
               <thead class="table-light">
                 <tr>
-                  <th style="text-align: left;">Date</th>
-                  <th style="text-align: left;">Book</th>
-                  <th style="text-align: left;">Transaction Type</th>
-                  <th style="text-align: left;">Details</th>
-                  <th style="text-align: left;">Paid From</th>
-                  <th style="text-align: left;">Paid To</th>
-                  <th style="text-align: left;">Amount</th>
-                  <th style="text-align: left;">Created By</th>
-                  <th style="text-align: left;">Actions</th>
+                  <th style="text-align: left;"><b>Date</b></th>
+                  <th style="text-align: left;"><b>Book</b></th>
+                  <th style="text-align: left;"><b>Transaction Type</b></th>
+                  <th style="text-align: left;"><b>Details</b></th>
+                  <th style="text-align: left;"><b>Paid From</b></th>
+                  <th style="text-align: left;"><b>Paid To</b></th>
+                  <th style="text-align: left;"><b>Amount</b></th>
+                  <th style="text-align: left;"><b>Created By</b></th>
+                  <th style="text-align: left;"><b>Actions</b></th>
                 </tr>
               </thead>
               <tbody
